# ppr-semester-proj

./: .gitignore  README.md  generate_distribution.py  vis.ipynb
clSandbox/: kernel.cl  (+3 more)
msvc/: CMakeLists.txt  Devices.h  DiskReader.h  Init.h  IoHandler.cpp  IoHandler.h  OpenCLTest.h  Timer.h  Worker.h  argParsing.h  main.cpp  openClTest.cl  pprsolver.vcxproj  pprsolver.vcxproj.filters  setup.md
msvc/cl_sources/: sandbox.py  valid_double_check.ocl
msvc/include/: cxxopts.h
msvc/src/: ArgParser.cpp  ArgParser.h  ArgParsing.h  Arghandling.cpp  Arghandling.h  ArgumentParser.h  Avx2CpuDeviceCoordinator.cpp  Avx2CpuDeviceCoordinator.h  Avx2RunningStats.h  Avx2StatsAccumulator.h  ClCompiler.h  ClDeviceCoordinator.cpp  ClDeviceCoordinator.h  ClKernels.h  ClSources.h  ConcurrencyUtils.h  CpuDeviceCoordinator.cpp  CpuDeviceCoordinator.h  DataLoader.h  DeviceCoordinator.h  Devices.h  DistributionClassification.h  FileChunkHandler.cpp  FileChunkHandler.h  Job.h  JobAggregator.h  JobScheduler.h  Logging.h  MemoryAllocation.h  MemoryUtils.h  OpenClTest.h  ProcessingConfig.h  RunningStats.h  RunningStatsAvx2.h  SingleThreadDeviceCoordinator.h  SingleThreadStatsComputation.h  SmpDeviceCoordinator.cpp  SmpDeviceCoordinator.h  StatUtils.h  StatsAccumulator.cpp  (+7 more)
prototype/: CMakeLists.txt
prototype/src/: Main.cpp  WorkerPool.h  structs.h
prototype/src/OpenCL/: OpenCLDevice.h
prototype/src/device/: device_coordinator.cpp  device_coordinator.h
prototype/src/io/: io_handler.h
prototype/src/job/: job.h  job_scheduler.cpp  job_scheduler.h
prototype/src/monitoring/: watchdog.h
(+46 files in other folders)
